# gearvn-crawler

./: .gitignore  PLAN.md  README.md  pyproject.toml  verify_hierarchy.py
data/: clean.mongodb.js  delete_invalid_level3.mongodb.js  import.mongodb.js  import_miss_subcategories.mongodb.js  migrate_category_brand_filter.mongodb.js  nomalize.mongodb.js  pipeline.mongodb.js  setup.mongodb.js  setup_brand_category.mongodb.js
data/brands/: monitor_brands.json  pc_component_brands.json
data/input/: gearvn_categories.json
data/json/: audio_device_brands.json  chair_brands.json  laptop_brands.json  peripheral_device_brands.json  ram_ssd_hdd_brands.json
data/models/: Brand.txt  Category.txt  Product.txt
scratch/: gen_brands.py  gen_cats.py
src/: main.py
src/config/: settings.py
src/crawlers/: base_crawler.py  detail_crawler.py  list_crawler.py
src/loaders/: category_loader.py
src/models/: product_model.py
src/parsers/: detail_parser.py  list_parser.py
src/storage/: json_writer.py
src/utils/: helpers.py  logger.py
