[project]
name = "gearvn-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.1.0",
    "markdownify>=1.2.2",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]
